--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>background color:
         <span class="color">#f1f5f8</span>
       </h2>
-      <button class="btn">click me</button>
+      <button class="btn">random</button>
     </main>
   </nav>
   <script src="script.js"></script>
